Fix media icons alignment

--- a/index.css
+++ b/index.css
@@ -574,6 +574,8 @@ footer {
         box-sizing: border-box;
         padding: 50px 0;
         justify-self: stretch;
+        /* display: grid;
+        grid-gap: 20px; */
     }
 
     input[placeholder="Name"] {
@@ -596,8 +598,18 @@ footer {
     .contact-container {
         text-align: left;
     }
+    .contact-container ul {
+        margin-bottom: 40px;
+    }
+    .contact-container ul li {
+        margin: 0;
+        padding-bottom: 40px;
+    }
     .media-in-contact {
         justify-content: flex-start;
+        align-items: flex-start;
+        box-sizing: border-box;
+        padding-top: 20px;
     }
     .contact-form .social-media-list {
         width: 100%;
@@ -608,6 +620,7 @@ footer {
     }
     .contact-form .social-media-list-item {
         justify-content: flex-start;
+        
     }
 }
 
